- Add vtune fixes from Intel.
suse-commit: 256bc9355a75aaed1c657403cfd229029678d146

--- a/drivers/char/vtune/Makefile
+++ b/drivers/char/vtune/Makefile
@@ -1,13 +1,12 @@
 flags-$(CONFIG_X86)	+= -Dlinux32
 flags-$(CONFIG_X86_64)	+= -Dlinux32_64
-flags-$(CONFIG_IA64)	+= -Dlinux64 -DSA_PERCPU_IRQ_SUPPORTED
+flags-$(CONFIG_IA64)	+= -Dlinux64
 #flags-$(CONFIG_PERFMON)	+= -DPERFMON_SUPPORTED
 
 EXTRA_CFLAGS += -I$(src)/include \
 		-DKERNEL_26X \
 		-DUSE_TYPE_WAIT_QUEUE_NEW \
 		-DUSE_TYPE_FILE_OPS_NEW \
-		-DUSE_VMALLOC \
 		-DUSE_MM_HEADER \
 		-DEXPORTED_FOR_EACH_PROCESS \
 		-DUSE_PARENT_TASK_FIELD \
