Only strip debug symbols from vmlinux.
suse-commit: e49b9d39a8ba94af030866503ead260024a29cb3

--- a/arch/ia64/Makefile
+++ b/arch/ia64/Makefile
@@ -13,7 +13,7 @@ READELF := $(CROSS_COMPILE)readelf
 
 export AWK
 
-OBJCOPYFLAGS	:= --strip-all
+OBJCOPYFLAGS	:= --strip-debug
 LDFLAGS_vmlinux	:= -static
 LDFLAGS_MODULE	+= -T $(srctree)/arch/ia64/module.lds
 AFLAGS_KERNEL	:= -mconstant-gp
