--- a/arch/ppc64/lib/Makefile
+++ b/arch/ppc64/lib/Makefile
@@ -3,7 +3,4 @@
 #
 
 lib-y := checksum.o dec_and_lock.o string.o strcase.o
-lib-y += copypage.o memcpy.o copyuser.o
-
-lib-$(CONFIG_PPC_ISERIES) += locks.o
-lib-$(CONFIG_PPC_SPLPAR)  += locks.o
+lib-y += copypage.o memcpy.o copyuser.o locks.o
