Fixing patches.suse/lkcd-arch-kerntypes.patch to apply again.
suse-commit: e2f28d2e549e20d648f77c1ed9f7c3839514ecec

--- a/arch/s390/Makefile
+++ b/arch/s390/Makefile
@@ -52,12 +52,12 @@ drivers-$(CONFIG_MATHEMU) += arch/$(ARCH)/math-emu/
 
 boot		:= arch/$(ARCH)/boot
 
-all: image kerntypes.o
+all: image
 
 install: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $@
 
-image kerntypes.o: vmlinux
+image: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 archclean:
