update aic7xxx to 6.3.6 and aic79xxx to 2.0.8 (#40144)
suse-commit: 378fb0de387a14bca189d01b05fcce2afb21d476

--- a/drivers/scsi/aic7xxx/Makefile
+++ b/drivers/scsi/aic7xxx/Makefile
@@ -1,7 +1,7 @@
 #
 # Makefile for the Linux aic7xxx SCSI driver.
 #
-# $Id: //depot/linux-aic79xx-2.5.0/drivers/scsi/aic7xxx/Makefile#8 $
+# $Id$
 #
 
 # Let kbuild descend into aicasm when cleaning
@@ -33,10 +33,7 @@ aic79xx-y					+= aic79xx_osm.o	\
 						   aic79xx_proc.o	\
 						   aic79xx_osm_pci.o
 
-EXTRA_CFLAGS += -Idrivers/scsi
-ifdef WARNINGS_BECOME_ERRORS
-EXTRA_CFLAGS += -Werror
-endif
+EXTRA_CFLAGS += -Idrivers/scsi -Werror
 #EXTRA_CFLAGS += -g
 
 # Files generated that shall be removed upon make clean
