+- add patches.suse/kdb-xmon-ppc64-shuffle-sysrq-keys +  Alt-SysRq-d for KDB overrides LKCD (#40373 - LTC8431)
suse-commit: 789d642e21cd5dc32e739299052d495290782c52

--- a/arch/ppc64/Kconfig
+++ b/arch/ppc64/Kconfig
@@ -475,7 +475,7 @@ config XMON_DEFAULT
 	  kernel but will not be entered when a serious error occurs -
 	  instead the kernel will print an oops message.  Xmon can be
 	  activated by doing "echo 1 >/proc/sys/kernel/xmon" as root,
-	  by pressing alt-sysrq-x, or by giving the xmon=on or xmon=force
+	  by pressing alt-sysrq-A(nton), or by giving the xmon=on or xmon=force
 	  boot command line options.  If in doubt say N.
 
 config KDB
