... and add the patch file.
suse-commit: ee5a66eebc015cffa64c83d6cf403f664a40c4c2

--- a/arch/um/Makefile
+++ b/arch/um/Makefile
@@ -4,7 +4,7 @@
 #
 
 ARCH_DIR = arch/um
-OS := $(shell uname -s)
+OS := Linux
 
 # Recalculate MODLIB to reflect the EXTRAVERSION changes (via KERNELRELEASE)
 # The way the toplevel Makefile is written EXTRAVERSION is not supposed
