- remove patches.uml/uml-kill-superfluous-uname, doesn't fix the   problem.
suse-commit: 727fc2e41b88dae5716059ea5441b65358a77368

--- a/arch/um/Makefile
+++ b/arch/um/Makefile
@@ -4,7 +4,7 @@
 #
 
 ARCH_DIR = arch/um
-OS := Linux
+OS := $(shell uname -s)
 
 # Recalculate MODLIB to reflect the EXTRAVERSION changes (via KERNELRELEASE)
 # The way the toplevel Makefile is written EXTRAVERSION is not supposed
