subfs: cleanup parameter parsing.
suse-commit: fcf5cac4f3e213e8a1fa4402ee3e6e900ed428fe

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -393,7 +393,7 @@ config DNOTIFY
 
 config SUBFS_FS
 	tristate "subfs file system support"
-	---help---
+	help
 	  If you don't know whether you need it, then you don't need it:
 	  answer N.
 
