--- a/fs/subfs/Makefile
+++ b/fs/subfs/Makefile
@@ -1,5 +1,5 @@
 #
-# Makefile for the SuSE Windows XP subfs filesystem routines.
+# Makefile for the subfs filesystem routines.
 #
 
 obj-$(CONFIG_SUBFS_FS) += subfs.o
