Update Xen patches to 2.0.6a level.
suse-commit: 9dcdf4574f9ab648dc96a18112da69b573a2d604

--- a/arch/xen/Makefile
+++ b/arch/xen/Makefile
@@ -37,8 +37,14 @@ arch/xen/arch:
 	@rm -f $@
 	@ln -fsn $(XENARCH) $@
 
+arch/$(XENARCH)/kernel/asm-offsets.s: include/asm include/linux/version.h \
+				   include/config/MARKER
+
+include/asm-$(ARCH)/asm_offsets.h: arch/$(XENARCH)/kernel/asm-offsets.s
+	$(call filechk,gen-asm-offsets)
+
 prepare: include/.asm-ignore include/asm-xen/asm \
-	arch/xen/arch ;
+	arch/xen/arch include/asm-$(ARCH)/asm_offsets.h ;
 
 all: vmlinuz
 
@@ -48,10 +54,13 @@ vmlinuz: vmlinux
 XINSTALL_NAME ?= $(KERNELRELEASE)
 install: vmlinuz
 	mkdir -p $(INSTALL_PATH)/boot
+	ln -f -s vmlinuz-$(XINSTALL_NAME)$(INSTALL_SUFFIX) $(INSTALL_PATH)/boot/vmlinuz-$(VERSION).$(PATCHLEVEL).$(SUBLEVEL)$(XENGUEST)$(INSTALL_SUFFIX)
+	rm -f $(INSTALL_PATH)/boot/vmlinuz-$(XINSTALL_NAME)$(INSTALL_SUFFIX)
 	install -m0644 vmlinuz $(INSTALL_PATH)/boot/vmlinuz-$(XINSTALL_NAME)$(INSTALL_SUFFIX)
 	install -m0644 vmlinux $(INSTALL_PATH)/boot/vmlinux-syms-$(XINSTALL_NAME)$(INSTALL_SUFFIX)
 	install -m0664 .config $(INSTALL_PATH)/boot/config-$(XINSTALL_NAME)$(INSTALL_SUFFIX)
 	install -m0664 System.map $(INSTALL_PATH)/boot/System.map-$(XINSTALL_NAME)$(INSTALL_SUFFIX)
+	ln -f -s vmlinuz-$(XINSTALL_NAME)$(INSTALL_SUFFIX) $(INSTALL_PATH)/boot/vmlinuz-$(VERSION).$(PATCHLEVEL)$(XENGUEST)$(INSTALL_SUFFIX)
 	mkdir -p $(INSTALL_PATH)/usr/include/xen/linux
 	install -m0644 include/asm-xen/linux-public/*.h $(INSTALL_PATH)/usr/include/xen/linux
 
