- patches.arch/optimize-686: Add i686 optimization flag. - patches.drivers/alsa-2.6.12-git.diff: ALSA GIT update from   2.6.12. - series.conf:
suse-commit: a2fede8436591f749107fca4c35f9e23d4b02b47

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -77,7 +77,7 @@ CFLAGS += $(call cc-option,-fno-unit-at-a-time)
 # m586 and genericarch is likely a distribution kernel. optimize for the
 # most common CPU (686)
 ifeq ($(CONFIG_X86_GENERICARCH),y)
-cflags-$(CONFIG_M586) += -mcpu=i686
+cflags-$(CONFIG_M586) += -mtune=i686
 endif
 
 CFLAGS += $(cflags-y)
