--- a/arch/ppc/Makefile
+++ b/arch/ppc/Makefile
@@ -134,7 +134,6 @@ checkbin:
 		false ; \
 	fi
 
-CLEAN_FILES +=	include/asm-$(ARCH)/offsets.h \
-		arch/$(ARCH)/kernel/asm-offsets.s \
+CLEAN_FILES +=	arch/$(ARCH)/kernel/asm-offsets.s \
 		$(TOUT)
-
+MRPROPER_FILES += include/asm-$(ARCH)/offsets.h
