Update subdomain LSM.
suse-commit: 88b41cff48caaff0d0be9a898523c6a1fb1b47de

--- a/security/subdomain/Makefile
+++ b/security/subdomain/Makefile
@@ -1,11 +1,10 @@
-# $Id: Makefile,v 1.31 2004/10/01 17:28:37 tony Exp $
+# $Id: Makefile 4471 2005-05-06 00:36:36Z jj $
 #
 # Makefile for SubDomain Linux Security Module
 #
 
+SUBDOMAINVER=1.1-7.42imnx_suse.4494
 __NETDOMAIN_CFLAG=
-#__NETDOMAIN_CFLAG=-DNETDOMAIN -DNETDOMAIN_SKUSERS
-
 SD_CFLAGS=-DSUBDOMAIN_PROCATTR -DSUBDOMAIN_FS -DPRINTK_TEMPFIX ${__NETDOMAIN_CFLAG}
 
 EXTRA_CFLAGS += -DSUBDOMAIN_VERSION=\"${SUBDOMAINVER}\" ${SD_CFLAGS} -DSD_26_INTERFACE
