--- a/mm/Makefile
+++ b/mm/Makefile
@@ -20,4 +20,5 @@ obj-$(CONFIG_SHMEM) += shmem.o
 obj-$(CONFIG_TINY_SHMEM) += tiny-shmem.o
 obj-$(CONFIG_TMPFS_POSIX_ACL) += shmem_acl.o
 
+obj-$(CONFIG_PROC_MM)	+= proc_mm.o
 obj-$(CONFIG_FS_XIP) += filemap_xip.o
