+- add patches.suse/mtd-broken.patch +  temporary disable CONFIG_MTD
suse-commit: 4063e01799a01f017fca45099abc25a910e32957

--- a/drivers/mtd/Kconfig
+++ b/drivers/mtd/Kconfig
@@ -4,6 +4,7 @@ menu "Memory Technology Devices (MTD)"
 
 config MTD
 	tristate "Memory Technology Device (MTD) support"
+	depends on BROKEN
 	help
 	  Memory Technology Devices are flash, RAM and similar chips, often
 	  used for solid state file systems on embedded devices. This option
