- Update config files. - patches.drivers/qla4xxx: add qlogic qla4xxx driver version   v5.00.01b10 (none).
suse-commit: 06dd1429f6a7b892fd92f8a7f92cc0d26e3fd521

--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -1318,6 +1318,8 @@ config SCSI_LPFC
           This lpfc driver supports the Emulex LightPulse
           Family of Fibre Channel PCI host adapters.
 
+source "drivers/scsi/qla4xxx/Kconfig"
+
 config SCSI_SEAGATE
 	tristate "Seagate ST-02 and Future Domain TMC-8xx SCSI support"
 	depends on X86 && ISA && SCSI && BROKEN
