--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1517,5 +1517,9 @@ if FB && SYSFS
 	source "drivers/video/backlight/Kconfig"
 endif
 
+if FB
+	source "drivers/video/bootsplash/Kconfig"
+endif
+
 endmenu
 
