--- a/drivers/xen/Kconfig
+++ b/drivers/xen/Kconfig
@@ -71,21 +71,34 @@ config XEN_NETDEV_BACKEND
 	  network devices to other guests via a high-performance shared-memory
 	  interface.
 
+config XEN_NETDEV_PIPELINED_TRANSMITTER
+	bool "Pipelined transmitter (DANGEROUS)"
+	depends on XEN_NETDEV_BACKEND
+	default n
+	help
+	  If the net backend is a dumb domain, such as a transparent Ethernet
+	  bridge with no local IP interface, it is safe to say Y here to get
+	  slightly lower network overhead.
+	  If the backend has a local IP interface; or may be doing smart things
+	  like reassembling packets to perform firewall filtering; or if you
+	  are unsure; or if you experience network hangs when this option is
+	  enabled; then you must say N here.
+
 config XEN_TPMDEV_BACKEND
-        bool "TPM-device backend driver"
+	bool "TPM-device backend driver"
 	depends on XEN_PHYSDEV_ACCESS
-        default n
-        help
-          The TPM-device backend driver
+	default n
+	help
+	  The TPM-device backend driver
 
 config XEN_TPMDEV_CLOSE_IF_VTPM_FAILS
-        bool "TPM backend closes upon vTPM failure"
-        depends on XEN_TPMDEV_BACKEND
-        default n
-        help
-          The TPM backend closes the channel if the vTPM in userspace indicates
-          a failure. The corresponding domain's channel will be closed.
-          Say Y if you want this feature.
+	bool "TPM backend closes upon vTPM failure"
+	depends on XEN_TPMDEV_BACKEND
+	default n
+	help
+	  The TPM backend closes the channel if the vTPM in userspace indicates
+	  a failure. The corresponding domain's channel will be closed.
+	  Say Y if you want this feature.
 
 config XEN_BLKDEV_FRONTEND
 	tristate "Block-device frontend driver"
@@ -107,23 +120,6 @@ config XEN_NETDEV_FRONTEND
 	  dedicated device-driver domain, or your master control domain
 	  (domain 0), then you almost certainly want to say Y here.
 
-config XEN_NETDEV_FRONTEND_PIPELINED_TRANSMITTER
-	bool "Pipelined transmitter (DANGEROUS)"
-	depends on XEN_NETDEV_FRONTEND
-	default n
-	help
-	  The driver will assume that the backend is pipelining packets for
-	  transmission: whenever packets are pending in the remote backend,
-	  the driver will not send asynchronous notifications when it queues
-	  additional packets for transmission.
-	  If the backend is a dumb domain, such as a transparent Ethernet
-	  bridge with no local IP interface, it is safe to say Y here to get
-	  slightly lower network overhead.
-	  If the backend has a local IP interface; or may be doing smart things
-	  like reassembling packets to perform firewall filtering; or if you
-	  are unsure; or if you experience network hangs when this option is
-	  enabled; then you must say N here.
-
 config XEN_BLKDEV_TAP
 	bool "Block device tap driver"
 	default n
@@ -134,12 +130,12 @@ config XEN_BLKDEV_TAP
 	  space.  Odds are that you want to say N here.
 
 config XEN_TPMDEV_FRONTEND
-        bool "TPM-device frontend driver"
-        default n
+	bool "TPM-device frontend driver"
+	default n
 	select TCG_TPM
 	select TCG_XEN
-        help
-          The TPM-device frontend driver.
+	help
+	  The TPM-device frontend driver.
 
 config XEN_SHADOW_MODE
 	bool "Fake shadow mode"
