- Update config files. - patches.xen/xen3-fixup-mtrr-kconfig: Fix mtrr kconfig for   non-xen kernels.
suse-commit: a6ea92c038c4e498bc3179f90c2b11b886de11f6

--- a/arch/i386/Kconfig
+++ b/arch/i386/Kconfig
@@ -616,7 +616,7 @@ config MATH_EMULATION
 
 config MTRR
 	bool "MTRR (Memory Type Range Register) support"
-	depends on XEN_PRIVILEGED_GUEST
+	depends on (XEN_PRIVILEGED_GUEST || !X86_XEN)
 	default y if X86_XEN
 	---help---
 	  On Intel P6 family processors (Pentium Pro, Pentium II and later)
