- Drop -Werror in AppArmor module (causing non i386 builds to fail)
suse-commit: 33e7df11fd2bc4cccb492ea9c1413ec1304185fd

--- a/security/subdomain/Makefile
+++ b/security/subdomain/Makefile
@@ -3,7 +3,7 @@
 
 SUBDOMAINVER=2.0-16.43r5891
 
-EXTRA_CFLAGS += -DSUBDOMAIN_VERSION=\"${SUBDOMAINVER}\" -Werror -Wwrite-strings
+EXTRA_CFLAGS += -DSUBDOMAIN_VERSION=\"${SUBDOMAINVER}\" -Wwrite-strings
 
 subdir-$(CONFIG_SECURITY_SUBDOMAIN) += sdmatch
 obj-$(CONFIG_SECURITY_SUBDOMAIN) += subdomain.o
