--- a/security/subdomain/sdmatch/Makefile
+++ b/security/subdomain/sdmatch/Makefile
@@ -1,7 +1,7 @@
 # Makefile for SubDomain sdmatch submodule
 #
 
-EXTRA_CFLAGS += -Werror -Wwrite-strings
+EXTRA_CFLAGS += -Wwrite-strings
 
 obj-$(CONFIG_SECURITY_SUBDOMAIN) += sdmatch_pcre.o
 
