+- add a few patches from the powerpc.git tree for kdump and udbg +   patches.kernel.org/20060102-0002-powerpc-Merge-kexec.patch +   patches.kernel.org/20060102-0008-powerpc-IBMEBUS-bus-support.patch +   patches.kernel.org/20060102-0020-powerpc-Add-OF-address-parsing-code-2.patch +   patches.kernel.org/20060102-0021-powerpc-serial-port-discovery-2.patch +   patches.kernel.org/20060102-0022-powerpc-Unify-udbg-2.patch +   patches.kernel.org/20060102-0023-powerpc-Add-back-support-for-booting-from-BootX-2.patch +   patches.kernel.org/20060102-0024-powerpc-convert-macio_asic-to-use-prom_parse.patch +   patches.kernel.org/20060102-0036-powerpc-Fix-g5-build-with-xmon.patch +   patches.kernel.org/20060102-0037-powerpc-serial-port-discovery-cope-with-broken-firmware.patch +   patches.kernel.org/20060102-0042-powerpc-More-serial-probe-fixes-2.patch +   patches.kernel.org/20060102-0062-powerpc-powermac-adb-fix-dependency-on-btext_drawchar.patch +   patches.kernel.org/20060102-0064-powerpc-udbg-updates.patch +   patches.kernel.org/20060102-0065-powerpc-Update-OF-address-parsers.patch +   patches.kernel.org/20060102-0071-powerpc32-fix-definition-of-distribute_irqs.patch +   patches.kernel.org/20060102-0072-powerpc-Propagate-regs-through-to-machine_crash_shutdown.patch +   patches.kernel.org/20060102-0073-powerpc-Add-a-is_kernel_addr-macro.patch +   patches.kernel.org/20060102-0074-powerpc-Separate-usage-of-KERNELBASE-and-PAGE_OFFSET.patch +   patches.kernel.org/20060102-0078-powerpc-fix-for-Update-OF-address-parsers.patch +   patches.kernel.org/20060102-0080-powerpc-Add-CONFIG_CRASH_DUMP.patch +   patches.kernel.org/20060102-0081-powerpc-Create-a-trampoline-for-the-fwnmi-vectors.patch +   patches.kernel.org/20060102-0082-powerpc-Reroute-interrupts-from-0-offset-to-PHYSICAL_START-offset.patch +   patches.kernel.org/20060102-0083-powerpc-Fixups-for-kernel-linked-at-32-MB.patch +   patches.kernel.org/20060102-0084-powerpc-Add-arch-dependent-basic-infrastructure-for-Kdump.patch +   

--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -50,7 +50,7 @@ config PPC
 
 config EARLY_PRINTK
 	bool
-	default y if PPC64
+	default y
 
 config COMPAT
 	bool
@@ -379,10 +379,28 @@ config CELL_IIC
 	bool
 	default y
 
+config CRASH_DUMP
+	bool "kernel crash dumps (EXPERIMENTAL)"
+	depends on PPC_MULTIPLATFORM
+	depends on EXPERIMENTAL
+	help
+	  Build a kernel suitable for use as a kdump capture kernel.
+	  The kernel will be linked at a different address than normal, and
+	  so can only be used for Kdump.
+
+	  Don't change this unless you know what you are doing.
+
 config IBMVIO
 	depends on PPC_PSERIES || PPC_ISERIES
 	bool
 	default y
+
+config IBMEBUS
+	depends on PPC_PSERIES
+	bool "Support for GX bus based adapters"
+	default y
+	help
+	  Bus device driver for GX bus based adapters.
 
 config PPC_MPC106
 	bool
