--- a/fs/ocfs2/cluster/Makefile
+++ b/fs/ocfs2/cluster/Makefile
@@ -1,10 +1,9 @@
-CLUSTER_BUILD_VERSION="\"1.3.2 svn 2710\""
-EXTRA_CFLAGS += -DCLUSTER_BUILD_VERSION=$(CLUSTER_BUILD_VERSION)
-
-KAPI_INCLUDE_DIR = $(srctree)/fs/ocfs2/kapi-compat/include
-EXTRA_CFLAGS += -include $(KAPI_INCLUDE_DIR)/kref_init.h
-
 obj-$(CONFIG_OCFS2_FS) += ocfs2_nodemanager.o
+obj-$(CONFIG_OCFS2_FS_O2CB) += ocfs2_disk_heartbeat.o
+obj-$(CONFIG_OCFS2_FS_USERSPACE_CLUSTER) += ocfs2_user_heartbeat.o
 
-ocfs2_nodemanager-objs := heartbeat.o masklog.o nodemanager.o \
-       quorum.o tcp.o ver.o sys.o
+ocfs2_nodemanager-objs := heartbeat.o masklog.o sys.o nodemanager.o \
+	tcp.o ver.o
+
+ocfs2_disk_heartbeat-objs := disk_heartbeat.o quorum.o
+ocfs2_user_heartbeat-objs := user_heartbeat.o
