Update kdb patches.
suse-commit: ae4a0d8bcf8ab2b680714d0b28c5d97a5b660144

--- a/arch/ia64/kdb/Makefile
+++ b/arch/ia64/kdb/Makefile
@@ -12,6 +12,7 @@ obj-y	 := kdba_bt.o kdba_bp.o kdba_io.o kdbasupport.o \
 # fru does not compile on 2.6.
 # obj-$(CONFIG_IA64_SGI_SN2) += kdba_fru.o
 obj-$(CONFIG_IA64_SGI_SN2) += kdba_pod.o
+obj-$(CONFIG_IA64_GENERIC) += kdba_pod.o
 
 override CFLAGS := $(CFLAGS:%-pg=% )
 
