- patches.suse/netfilter-nf_conntrack{,-fixup}: Delete - obsolete - patches.suse/netfilter-03-input-hooks, netfilter-04-policy-lookup,   netfilter-05-policy-checks, netfilter-06-policy-match,   patches.suse/netfilter-hooks-checksum: Updated - patches.suse/safer-ip-reassembly: Rediffed
suse-commit: 9a1875f76cd67585e6e02ca1b92459b2368959ce

--- a/net/ipv4/netfilter/Makefile
+++ b/net/ipv4/netfilter/Makefile
@@ -74,6 +74,7 @@ obj-$(CONFIG_IP_NF_MATCH_ADDRTYPE) += ipt_addrtype.o
 obj-$(CONFIG_IP_NF_MATCH_PHYSDEV) += ipt_physdev.o
 obj-$(CONFIG_IP_NF_MATCH_COMMENT) += ipt_comment.o
 obj-$(CONFIG_IP_NF_MATCH_STRING) += ipt_string.o
+obj-$(CONFIG_IP_NF_MATCH_POLICY) += ipt_policy.o
 
 # targets
 obj-$(CONFIG_IP_NF_TARGET_REJECT) += ipt_REJECT.o
