- Update config files. - patches.uml/uml-x11-fb: rediffed and enabled.
suse-commit: f55355ac2a882023e597181217e6dffe2070fce3

--- a/arch/um/Kconfig
+++ b/arch/um/Kconfig
@@ -117,6 +117,16 @@ config NET
 	recommended to read the NET-HOWTO, available from
 	<http://www.tldp.org/docs.html#howto>.
 
+source "drivers/input/Kconfig"
+source "drivers/char/Kconfig"
+source "drivers/video/Kconfig"
+
+config X11_FB
+	bool "X11 Framebuffer driver"
+	depends on FB && !MODE_TT && !STATIC_LINK
+	select FB_CFB_FILLRECT
+	select FB_CFB_COPYAREA
+	select FB_CFB_IMAGEBLIT
 
 source "fs/Kconfig.binfmt"
 
