- patches.arch/s390/base-*-october2005.diff - patches.arch/s390-01-*-october2005.diff   Base SLES10 codedrop from IBM. - Removed obsolete patches:   - patches.arch/s390-suse-bk-cpint_cpcmd.diff   - patches.arch/s390-fix-arch-switch   - patches.arch/s390-qeth-compile-fix   - patches.arch/s390-atomic-sub-and-test   - patches.arch/s390-netdev-eui64.patch - Update config files for S/390.
suse-commit: b35092576cdfc3f51afcef91732cc83d0fbbc6cc

--- a/drivers/s390/net/Kconfig
+++ b/drivers/s390/net/Kconfig
@@ -60,6 +60,17 @@ config CLAW
 	  To compile as a module choose M here:  The module will be called
 	  claw.ko to compile into the kernel choose Y
 
+config MPC
+	tristate "MPC SNA device support"
+	depends on NETDEVICES
+	help
+	  This driver supports channel-to-channel MPC SNA devices.
+	  MPC is a SNA protocol device used by Comm Server for Linux.
+	  If you don't have Comm Server for Linux you don't need the device.
+	  To compile as a module choose M here:  The module will be called
+	  ctcmpc.ko to compile into the kernel choose Y
+	  If you do not need SNA MPC device just say N
+
 config QETH
 	tristate "Gigabit Ethernet device support"
 	depends on NETDEVICES && IP_MULTICAST && QDIO
