- patches.suse/ioat-dma-*: Enabled IOAT (142510). - Update config files.
suse-commit: 3668951db3ed21c43ee32285cfe277ce2b7ddbde

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -71,3 +71,5 @@ obj-$(CONFIG_SGI_IOC4)		+= sn/
 obj-y				+= firmware/
 obj-$(CONFIG_CRYPTO)		+= crypto/
 obj-$(CONFIG_SUPERH)		+= sh/
+obj-$(CONFIG_DMA_ENGINE)	+= dma/
+
