- patches.uml/fix-build: Unbreak "make prepare" on UML.
suse-commit: 6b331266ec9efbdef1dfc7630ffb0d2299c0022a

--- a/arch/um/Makefile
+++ b/arch/um/Makefile
@@ -225,6 +225,7 @@ CLEAN_FILES += $(ARCH_DIR)/user-offsets.s
 
 $(ARCH_DIR)/include/kern_constants.h:
 	@echo '  SYMLINK $@'
+	$(Q) mkdir -p $(ARCH_DIR)/include
 	$(Q) ln -sf ../../../include/asm-um/asm-offsets.h $@
 
 export SUBARCH USER_CFLAGS OS
