--- a/drivers/scsi/iscsitarget/Makefile
+++ b/drivers/scsi/iscsitarget/Makefile
@@ -7,6 +7,8 @@
 #
 # Note 2! The CFLAGS definitions are now in the main makefile.
 
+EXTRA_CFLAGS += -I$(src)/../include 
+
 obj-m		+= iscsi_trgt.o
 iscsi_trgt-objs	:= tio.o iscsi.o nthread.o wthread.o config.o digest.o \
 			conn.o session.o target.o volume.o iotype.o \
