- patches.drivers/dm_netlink_part{1,2,3}.diff   Update dm-netlink (#142816 - LTC20642) - Update config files.
suse-commit: d1529c1430c27813ee41cc852e68814d3558c05d

--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -236,5 +236,10 @@ config DM_MULTIPATH_EMC
 	---help---
 	  Multipath support for EMC CX/AX series hardware.
 
+config DM_NL_EVT
+	bool "DM netlink events (EXPERIMENTAL)"
+	depends on BLK_DEV_DM && EXPERIMENTAL
+	---help---
+	Generate netlink events for DM events.
 endmenu
 
