+- add patches.arch/8250-init.patch +  add patches.arch/ppc-enable-isa-for-serial.patch +  call platform_driver_register later, enable CONFIG_ISA on ppc64 +  to get legacy 8250 ports +  reenable maple support on ppc64
suse-commit: 19947be3b7461d5a01c2ed06f8cf4cb21e1a3ae0

--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -712,7 +712,7 @@ menu "Bus options"
 
 config ISA
 	bool "Support for ISA-bus hardware"
-	depends on PPC_PREP || PPC_CHRP
+	depends on PPC_PREP || PPC_CHRP || PPC_PSERIES
 	select PPC_I8259
 	help
 	  Find out whether you have ISA slots on your motherboard.  ISA is the
