- Back-patched OCFS2 to the version found in SLES9 SP3 at   Oracle's request, and remerged userspace clustering against it.
suse-commit: 6d84b3428db3a9aaacb6c6bd13333d43effb38e3

--- a/fs/ocfs2/Makefile
+++ b/fs/ocfs2/Makefile
@@ -5,6 +5,7 @@ EXTRA_CFLAGS += -DCATCH_BH_JBD_RACES
 obj-$(CONFIG_OCFS2_FS) += ocfs2.o
 
 ocfs2-objs := \
+	aio.o			\
 	alloc.o 		\
 	aops.o 			\
 	buffer_head_io.o	\
@@ -20,6 +21,7 @@ ocfs2-objs := \
 	localalloc.o 		\
 	mmap.o 			\
 	namei.o 		\
+	proc.o			\
 	slot_map.o 		\
 	suballoc.o 		\
 	super.o 		\
