- Update config files.   * Enable CONFIG_KDB for x86-64 debug kernel - patches.suse/kdb-x86_64: KDB support for x86-64. - patches.suse/x86_64-smp-kdb-stop: Implement smp_kdb_stop in   the proper way. - patches.suse/x86_64-kdebug-events: Add KDEBUG events needed   for KDB. - patches.xen/xen3-auto-arch-x86_64.diff: Rediff
suse-commit: 6eb4899f8ce406aec9c276891ff7560f8c37cc82

--- a/arch/x86_64/Makefile
+++ b/arch/x86_64/Makefile
@@ -29,6 +29,7 @@ CHECKFLAGS      += -D__x86_64__ -m64
 
 cflags-$(CONFIG_MK8) += $(call cc-option,-march=k8)
 cflags-$(CONFIG_MPSC) += $(call cc-option,-march=nocona)
+cflags-$(CONFIG_KDB) += $(call cc-option,-fno-optimize-sibling-calls,)
 CFLAGS += $(cflags-y)
 
 CFLAGS += -m64
@@ -66,13 +67,14 @@ endif
 
 head-y := arch/$(archdir)/kernel/head.o arch/$(archdir)/kernel/head64.o arch/$(archdir)/kernel/init_task.o
 
-libs-y 					+= arch/x86_64/lib/
+libs-y 					+= arch/$(archdir)/lib/
 core-y					+= arch/$(archdir)/kernel/ \
 					   arch/$(archdir)/mm/ \
-					   arch/x86_64/crypto/
+					   arch/$(archdir)/crypto/
 core-$(CONFIG_IA32_EMULATION)		+= arch/$(archdir)/ia32/
 drivers-$(CONFIG_PCI)			+= arch/$(archdir)/pci/
-drivers-$(CONFIG_OPROFILE)		+= arch/x86_64/oprofile/
+drivers-$(CONFIG_OPROFILE)		+= arch/$(archdir)/oprofile/
+drivers-$(CONFIG_KDB)			+= arch/$(archdir)/kdb/
 
 boot := arch/$(archdir)/boot
 
