--- a/arch/x86_64/Makefile
+++ b/arch/x86_64/Makefile
@@ -29,7 +29,10 @@ CHECKFLAGS      += -D__x86_64__ -m64
 
 cflags-$(CONFIG_MK8) += $(call cc-option,-march=k8)
 cflags-$(CONFIG_MPSC) += $(call cc-option,-march=nocona)
+cflags-$(CONFIG_GENERIC_CPU) += $(call cc-option,-mtune=generic)
+
 cflags-$(CONFIG_KDB) += $(call cc-option,-fno-optimize-sibling-calls,)
+
 CFLAGS += $(cflags-y)
 
 CFLAGS += -m64
